[gd_scene load_steps=2 format=3 uid="uid://bfmw81k3isc75"]

[ext_resource type="Script" uid="uid://jhehuw17cbi0" path="res://Game Elements/ui/settings.gd" id="1_4geyq"]

[node name="Settings" type="Node2D"]

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_4geyq")

[node name="Volume" type="HSlider" parent="Control"]
layout_mode = 0
offset_left = 154.0
offset_top = 14.0
offset_right = 354.0
offset_bottom = 62.0
min_value = -40.0
max_value = 0.0
step = 0.1

[node name="Label" type="Label" parent="Control/Volume"]
layout_mode = 0
offset_left = -72.0
offset_top = 8.0
offset_right = -13.0
offset_bottom = 31.0
text = "Volume"

[node name="VolVal" type="Label" parent="Control/Volume"]
layout_mode = 0
offset_left = 208.0
offset_top = 16.0
offset_right = 248.0
offset_bottom = 39.0

[node name="ScreenSize" type="Button" parent="Control"]
visible = false
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0

[node name="Back" type="Button" parent="Control"]
layout_mode = 0
offset_left = 20.0
offset_top = 100.0
offset_right = 177.0
offset_bottom = 131.0
text = "Back to Main Menu"

[node name="MouseSensitivity" type="HSlider" parent="Control"]
layout_mode = 0
offset_left = 154.0
offset_top = 50.0
offset_right = 354.0
offset_bottom = 98.0
min_value = 0.1
max_value = 2.0
step = 0.1
value = 1.0

[node name="SensLabel" type="Label" parent="Control/MouseSensitivity"]
layout_mode = 0
offset_left = 208.0
offset_top = 11.0
offset_right = 343.0
offset_bottom = 34.0

[node name="Label" type="Label" parent="Control/MouseSensitivity"]
layout_mode = 0
offset_left = -149.0
offset_top = 12.0
offset_right = -14.0
offset_bottom = 35.0
text = "Mouse Sensitivity"

[connection signal="value_changed" from="Control/Volume" to="Control" method="_on_volume_value_changed"]
[connection signal="pressed" from="Control/Back" to="Control" method="_on_back_pressed"]
[connection signal="value_changed" from="Control/MouseSensitivity" to="Control" method="_on_mouse_sensitivity_value_changed"]
